--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{{rootURL}}assets/lolma-us.css">
 
     {{content-for "head-footer"}}
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
     {{content-for "body"}}
