--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 
     {{content-for "head"}}
 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300&amp;subset=cyrillic" rel="stylesheet">
+
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/lolma-us.css">
 
