--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,7 @@
     <script src="{{rootURL}}assets/lolma-us.js"></script>
 
     {{content-for "body-footer"}}
+
+    <script id="dsq-count-scr" src="//lolmaus.disqus.com/count.js" async></script>
   </body>
 </html>
