Fix font loading

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/lolma-us.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption|Merriweather:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
 
     {{content-for "head-footer"}}
   </head>
